human-intervention-logs/org.aesh:aesh:3.6/gradle-test/gradle-test-2026-06-07T22-31-05-870188Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.aesh:aesh:3.6
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/readline_console/ReadlineConsoleTest.java:69: error: wrong number of type arguments; required 1
    private static Settings<CommandInvocation, ConverterInvocation, CompleterInvocation,
                           ^
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/GraalReflectionCommandTest.java:21: error: package org.aesh.util.graal does not exist
import org.aesh.util.graal.GraalReflectionCommand;
                          ^
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/readline_console/ReadlineConsoleTest.java:72: error: method builder in class SettingsBuilder<CI> cannot be applied to given types;
                .<CommandInvocation, ConverterInvocation, CompleterInvocation, ValidatorInvocation,
                ^
  reason: wrong number of type arguments; required 1
  where CI is a type-variable:
    CI extends CommandInvocation declared in class SettingsBuilder
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/GraalReflectionCommandTest.java:33: error: cannot find symbol
                    .command(GraalReflectionCommand.class)
                             ^
  symbol:   class GraalReflectionCommand
  location: class GraalReflectionCommandTest
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/build/reports/problems/problems-report.html

Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/AnnotationDetectorTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/AnnotationDetectorTest.java uses or overrides a deprecated API.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/readline_console/ReadlineConsoleTest.java:72: error: method builder in class SettingsBuilder<CI> cannot be applied to given types;
                  .<CommandInvocation, ConverterInvocation, CompleterInvocation, ValidatorInvocation,
                  ^
    reason: wrong number of type arguments; required 1
    where CI is a type-variable:
      CI extends CommandInvocation declared in class SettingsBuilder
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/readline_console/ReadlineConsoleTest.java:69: error: wrong number of type arguments; required 1
      private static Settings<CommandInvocation, ConverterInvocation, CompleterInvocation,
                             ^
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/GraalReflectionCommandTest.java:33: error: cannot find symbol
                      .command(GraalReflectionCommand.class)
                               ^
    symbol:   class GraalReflectionCommand
    location: class GraalReflectionCommandTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/tests/src/org.aesh/aesh/3.6/src/test/java/org_aesh/aesh/GraalReflectionCommandTest.java:21: error: package org.aesh.util.graal does not exist
  import org.aesh.util.graal.GraalReflectionCommand;
                            ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7595-fdd9d297/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.aesh:aesh:3.6 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
